[package]
name = "proxie"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["client", "http2", "server", "tcp", "runtime"] }
hyper-rustls = "0.22"
indoc = "1.0"
markup = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.2"
